// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create account rejects on duplicate username 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "password": "Username already taken",
    },
    "locations": [
      {
        "column": 3,
        "line": 2,
      },
    ],
    "message": "bad request",
    "path": [
      "createAccount",
    ],
  },
]
`;

exports[`Create account rejects weak passwords 1`] = `
[
  {
    "extensions": {
      "code": "BAD_USER_INPUT",
      "password": "Password too weak",
    },
    "locations": [
      {
        "column": 3,
        "line": 2,
      },
    ],
    "message": "bad request",
    "path": [
      "createAccount",
    ],
  },
]
`;
